dowait error fix